# ecommerce

./: .env  .flaskenv  .gitignore  Brewfile  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  logging.yaml  manage.py  package.json  pyproject.toml  requirements.txt  tailwind.config.js
core/: __init__.py  config.py  models.py  search.py
core/admin/: views.py
core/cart/: forms.py  routes.py  utils.py
core/errors/: routes.py
core/main/: routes.py
core/products/: forms.py  routes.py  utils.py
core/static/css/: main.css
core/static/js/: add_product.js
core/templates/: _macros.html  base.html  cart.html  home.html
core/templates/admin/: index.html
core/templates/errors/: 403.html  404.html  500.html
core/templates/product/: add_category.html  add_product.html  categories.html  detail_category.html  detail_product.html  update_category.html  update_product.html
core/templates/user/: about.html  login.html  register.html  reset_request.html  (+1 more)
core/users/: forms.py  routes.py  utils.py
ecommerce/: __init__.py  celery.py  config.py  extensions.py  logs.py  models.py  search.py  settings.py  urls.py  utils.py
ecommerce/api/: __init__.py  encoders.py  schemas.py
ecommerce/auth/: __init__.py  forms.py  views.py
ecommerce/cart/: routes.py  utils.py
ecommerce/carts/: __init__.py  routes.py
ecommerce/categories/: __init__.py  forms.py  routes.py
ecommerce/errors/: __init__.py  routes.py
ecommerce/home/: __init__.py  forms.py  routes.py
ecommerce/main/: routes.py
ecommerce/models/: __init__.py  cart.py  category.py  order.py  ordered_product.py  product.py  role.py  sale_transaction.py  user.py
ecommerce/products/: __init__.py  forms.py  routes.py  utils.py
ecommerce/static/: package.json
ecommerce/templates/: _macros.html  add_category.html  base.html  cart.html  home.html  search.html
ecommerce/users/: __init__.py  forms.py  routes.py  utils.py
migrations/versions/: 07806adb20cb_.py  36e645c98715_.py  8633995a09dc_.py  b59808dc61d6_.py  fa2bd20176bc_.py
orders/: models.py  permissions.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_rename_udpated_at_order_updated_at_and_more.py
payment/: models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
payment/migrations/: 0001_initial.py  0002_alter_payment_payment_option.py
products/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_rename_quanity_product_quantity_comment.py
tests/: __init__.py  conftest.py  test_core.py  test_ecommerce.py
users/: admin.py  exceptions.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/utils/: email_backend.py  phone_backend.py
(+24 files in other folders)
