[project]
name = "ecommerce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.1.2",
    "django-rest-framework>=0.1.0",
    "celery>=5.4.0",
    "dj-rest-auth>=6.0.0",
    "drf-spectacular>=0.27.2",
    "pillow>=11.0.0",
    "django-allauth>=65.0.2",
    "django-cors-headers>=4.5.0",
    "django-phonenumber-field>=8.0.0",
    "djangorestframework-simplejwt>=5.3.1",
    "google-auth>=2.35.0",
    "django-countries>=7.6.1",
    "python-decouple>=3.8",
    "django-phonenumbers>=1.0.1",
    "twilio>=9.3.4",
    "cryptography>=43.0.3",
    "redis>=5.1.1",
    "psycopg2-binary>=2.9.10",
    "phonenumbers>=8.13.47",
]
